@@ -64,7 +64,7 @@ public class PieceObject {
                 validMoves.add(colNames[x+i] + " " + (y+i+1));
                 if(ChessBoard.chessBoard[7-y-i][x+i].getPiece() != null){
                     if(!isOpponentPiece(x+i, 7-y-i)){
-                        validMoves.removeLast();
+                        validMoves.remove(validMoves.size() - 1);
                     }
                     break;
                 }
@@ -77,7 +77,7 @@ public class PieceObject {
                 validMoves.add(colNames[x+i] + " " + (y-i+1));
                 if(ChessBoard.chessBoard[7-y+i][x+i].getPiece() != null){
                     if(!isOpponentPiece(x+i, 7-y+i)){
-                        validMoves.removeLast();
+                        validMoves.remove(validMoves.size() - 1);
                     }
                     break;
                 }
@@ -90,7 +90,7 @@ public class PieceObject {
                 validMoves.add(colNames[x-i] + " " + (y+i+1));
                 if(ChessBoard.chessBoard[7-y-i][x-i].getPiece() != null) {
                     if(!isOpponentPiece(x-i, 7-y-i)){
-                        validMoves.removeLast();
+                        validMoves.remove(validMoves.size() - 1);
                     }
                     break;
                 }
@@ -103,7 +103,7 @@ public class PieceObject {
                 validMoves.add(colNames[x-i] + " " + (y-i+1));
                 if(ChessBoard.chessBoard[7-y+i][x-i].getPiece() != null){
                     if(!isOpponentPiece(x-i, 7-y+i)){
-                        validMoves.removeLast();
+                        validMoves.remove(validMoves.size() - 1);
                     }
                     break;
                 }
@@ -126,7 +126,7 @@ public class PieceObject {
                 validMoves.add(colNames[x+i] + " " + y);
                 if(ChessBoard.chessBoard[8-y][x+i].getPiece() != null){
                     if (!isOpponentPiece(x+i, 8-y)){
-                        validMoves.removeLast();
+                        validMoves.remove(validMoves.size() - 1);
                     }
                     break;
                 }
@@ -139,7 +139,7 @@ public class PieceObject {
                 validMoves.add(colNames[x-i] + " " + y);
                 if(ChessBoard.chessBoard[8-y][x-i].getPiece() != null) {
                     if (!isOpponentPiece(x-i, 8-y)){
-                        validMoves.removeLast();
+                        validMoves.remove(validMoves.size() - 1);
                     }
                     break;
                 }
@@ -153,7 +153,7 @@ public class PieceObject {
                 validMoves.add(colNames[x] + " " + (y+i));
                 if (ChessBoard.chessBoard[8-(y+i)][x].getPiece() != null) {
                     if (!isOpponentPiece(x, 8-(y+i))){
-                        validMoves.removeLast();
+                        validMoves.remove(validMoves.size() - 1);
                     }
                     break;
                 }
@@ -166,7 +166,7 @@ public class PieceObject {
                 validMoves.add(colNames[x] + " " + (y-i));
                 if (ChessBoard.chessBoard[8-(y-i)][x].getPiece() != null) {
                     if (!isOpponentPiece(x, 8-(y-i))){
-                        validMoves.removeLast();
+                        validMoves.remove(validMoves.size() - 1);
                     }
                     break;
                 }
